--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
-baseURL = 'https://rayteams.github.io/'
+baseURL = 'https://rayteams.github.io/docs-rayteams/'
 title = 'RAYTeams Developer Center'
 theme = 'hugo-book'
 
